--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>Made by Samuel Sinulingga</footer>
   </body>
   <script src="index.js"></script>
 </html>
