--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <footer>Made by Samuel Sinulingga</footer>
+    <footer>Refresh The Website to Play!!!</footer>
   </body>
   <script src="index.js"></script>
 </html>
